# glyphling

./: .gitignore  README.md  pyproject.toml
asciipet/: cli.py  session.py  store.py
asciipet/core/: balance.py  generator.py  parts.py  renderer.py  simulation.py  spec.py
asciipet/tui/: app.py
glyphling/: cli.py  coord.py  daemon.py  engine.py  session.py  statusline.py  store.py
glyphling/core/: balance.py  events.py  generator.py  palette.py  parts.py  quirks.py  reactions.py  renderer.py  simulation.py  spec.py
glyphling/sensors/: base.py  clock.py  shell.py  vitals.py
glyphling/tui/: app.py
tests/: test_cli_daemon.py  test_cli_full.py  test_cli_hatch.py  test_cli_shell_init.py  test_cli_status.py  test_coord.py  test_daemon.py  test_daemon_integration.py  test_engine.py  test_session.py  test_smoke.py  test_statusline.py  test_store.py
tests/core/: test_balance.py  test_events.py  test_generator.py  test_palette.py  test_parts.py  test_quirks.py  test_reactions.py  test_renderer.py  test_simulation.py  test_spec.py
tests/sensors/: test_clock.py  test_shell.py  test_vitals.py
tests/tui/: test_app.py
