[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "glyphling"
version = "0.2.0"
description = "A procedurally-generated, interactive ASCII pet that lives in your terminal"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Luis Salik", email = "luissalik@gmail.com" }]
keywords = ["ascii", "pet", "terminal", "tui", "textual", "cli", "virtual-pet"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3",
    "Topic :: Games/Entertainment",
    "Topic :: Terminals",
]
dependencies = ["textual>=0.50", "psutil>=5.9"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-asyncio>=0.23"]

[project.urls]
Homepage = "https://github.com/lsalik2/glyphling"
Repository = "https://github.com/lsalik2/glyphling"
Issues = "https://github.com/lsalik2/glyphling/issues"

[project.scripts]
glyphling = "glyphling.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["glyphling"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
